[package]
name = "rocketreach-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust client library for the RocketReach API"
license = "BSD-3-Clause"
repository = "https://github.com/SassafrasAI/rocketreach-rs"
homepage = "https://github.com/SassafrasAI/rocketreach-rs"
readme = "README.md"
keywords = ["rocketreach", "api", "client", "people", "enrichment"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = ["/tests"]

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }